update: fixed align, added image

--- a/style.css
+++ b/style.css
@@ -133,7 +133,10 @@ list-style: none;
 }
 
 .padding-pd{
-    padding: 2rem;
+
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-right: 3rem;
 }
 
 .font-size{
@@ -149,4 +152,8 @@ list-style: none;
 .blog-link{
     text-decoration: none;
     color: black;
+}
+
+.text-center{
+    text-align: center;
 }
